classDiagram

namespace guitool {
  class TabTemplate
  class FigureConstant
}

namespace mtdomegui {
  class Model
  class Reporter
  class SignalTelemetry
}

Model *-- Reporter

Reporter *-- SignalTelemetry : emit()

TabTemplate <|-- TabThermalSystem
TabTemplate <|-- TabSelector

TabThermalSystem *-- Model
TabThermalSystem *-- TabSelector
TabThermalSystem *-- FigureConstant
TabThermalSystem --> SignalTelemetry : connect()

TabSelector *-- Model
